[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/letter-sketch-font/Lettersketch-ow1wV.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/TitleScreen/Selected_Button_Theme.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/TitleScreen/Non_Selected_Theme.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Fonts/Volkhorn_14.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/TitleScreen/BackGroundTest.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/Pause_Menu.gd" type="Script" id=6]
[ext_resource path="res://Objects/UI/CursorArea.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/SoundFX/button_click_1.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Pause_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1500.0
margin_bottom = 1000.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -276.0
margin_right = 104.0
margin_bottom = -231.0
rect_scale = Vector2( 1, 2.96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -68.0
margin_right = 64.0
margin_bottom = -28.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 3
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 60.0
margin_right = 96.0
margin_bottom = 100.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -20.0
margin_right = 96.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 3
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 124.0
margin_right = 64.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 3
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -4.0
margin_right = 64.0
margin_bottom = 36.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SaveButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 3
text = "Save"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CursorArea" parent="." instance=ExtResource( 7 )]

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="button_up" from="ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="MainMenuButton" to="." method="_on_MainMenuButton_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="SaveButton" to="." method="_on_SaveButton_button_up"]
